[FIX][UI] Fix color contrast on Select2 highlighted select option. Thanks, Marc. --- * [FIX][UI] Fix color contrast on Select2 highlighted select option. Thanks, Marc.
See merge request tikiwiki/tiki!5644

--- a/themes/base_files/scss/_select2-tiki_colors.scss
+++ b/themes/base_files/scss/_select2-tiki_colors.scss
@@ -101,6 +101,6 @@
 }
 
 .tiki .select2-container--default .select2-results__option--highlighted.select2-results__option--selectable {
-    background-color: var(--bs-primary);
+    background-color: var(--bs-tertiary-bg);
     color: var(--bs-primary-text-emphasis);
 }
